# Apk-Build

./: README.md  build.gradle  gradlew
.github/workflows/: build.yml
VoxelGame/: settings.gradle
VoxelGame/app/src/main/: AndroidManifest.xml
VoxelGame/app/src/main/cpp/: CMakeLists.txt  main.cpp
VoxelGame/app/src/main/cpp/auth/: GoogleAuth.h
VoxelGame/app/src/main/cpp/game/: Blocks.h  Game.h
VoxelGame/app/src/main/cpp/input/: TouchInput.cpp
VoxelGame/app/src/main/cpp/renderer/: Shaders.h
VoxelGame/app/src/main/cpp/world/: Chunk.cpp  World.cpp  World.h
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/auth/: GoogleAuth.cpp
app/src/main/cpp/game/: Game.cpp
app/src/main/cpp/input/: TouchInput.h
app/src/main/cpp/network/: FirebaseClient.cpp  FirebaseClient.h
app/src/main/cpp/renderer/: Renderer.cpp  Renderer.h
app/src/main/cpp/world/: Chunk.h
app/src/main/java/com/voxelpocket/: HttpHelper.java  MainActivity.java
